# project1_Pozdnyakov_Egor_M25-555

./: .gitignore  Makefile  build.ps1  pyproject.toml
labyrinth_game/: README.md  __init__.py  constants.py  main.py  player_actions.py  utils.py
